--- a/RestServer/public/index.html
+++ b/RestServer/public/index.html
@@ -1,34 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Sing-In</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Google Sing-In</h1>
-    <hr>
+    <hr />
+
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+    <div
+      id="g_id_onload"
+      data-client_id="752911840837-9kmo6gt6vlgga1hsu1ri52147s9598su.apps.googleusercontent.com"
+      data-auto_prompt="false"
+      data-callback="handleCredentialResponse"
+    ></div>
+    <div
+      class="g_id_signin"
+      data-type="standard"
+      data-size="large"
+      data-theme="outline"
+      data-text="sign_in_with"
+      data-shape="rectangular"
+      data-logo_alignment="left"
+    ></div>
+
     <script>
       function handleCredentialResponse(response) {
-        console.log("Encoded JWT ID token: " + response.credential);
-      }
-      window.onload = function () {
-        google.accounts.id.initialize({
-          client_id: "752911840837-2mpr9tvigcdu4poknuds7fj1gp6q5gme.apps.googleusercontent.com",
-          callback: handleCredentialResponse
-        });
-        google.accounts.id.renderButton(
-          document.getElementById("buttonDiv"),
-          { theme: "outline", size: "large" }  // customization attributes
-        );
-        google.accounts.id.prompt(); // also display the One Tap dialog
-      }
-  </script>
-  <div id="buttonDiv"></div> 
-</body>
 
+
+        const body = {
+          id_token : response.credential
+        }
+
+        fetch('http://localhost:3000/api/auth/google', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(body)
+        })
+          .then( resp => resp.json())
+          .then( resp => {
+            console.log(resp)
+          })
+          .catch( console.warn )
+
+         // decodeJwtResponse() is a custom function defined by you
+         // to decode the credential response.
+        //  const responsePayload = decodeJwtResponse(response.credential);
+    
+         console.log(response.credential);
+      }
+    </script>
+
+  </body>
 </html>
